--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,2 @@
 [build]
-  publish = "."  # Публикация из корня проекта
-  command = ""  # Если проект не требует сборки (например, чистые статические файлы)
-
-[[plugins]]
-  package = "@netlify/plugin-image-optimizer"
-  disabled = true  # Отключить сжатие изображений
+publish = "."  # Означает, что все файлы лежат в корне проекта
